# agentic-workflows

./: README.md  main.py  pyproject.toml  runner.py
agents/: agent.py  coder.py  planner.py
notebooks/: 1_simple_graph.ipynb  2_conditional_edges.ipynb  3_simple_chatbot.ipynb  4_chatbot_with_tools.ipynb  5_chatbot_with_tools_memory_saver.ipynb  6_chatbot_with_tools_memory_saver_HITL.ipynb  chatbot_with_tools_memory_saver.ipynb  conditional_edges.ipynb
project/e-commerce-01/: index.html  script.js
project/sample/: sample_plan.md
tools/: file_tools.py
